--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,58 @@ android {
 
 dependencies {
 
+    // Current version
+    def koin_version= "3.1.2"
+    def lifecycle_version = "2.4.0-rc01"
+    def retrofit_version = "2.9.0"
+    def logging_interceptor_version  = "4.9.2"
+    def room_version = "2.3.0"
+    def coroutines_version = "1.5.0"
+    def glide_version = "4.12.0"
+    def adapterDelegate_version = "4.3.0"
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //lifecycle
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    //OkHttpLogging
+    implementation "com.squareup.okhttp3:logging-interceptor:$logging_interceptor_version"
+
+    //DI
+    // Koin core features
+    implementation "io.insert-koin:koin-core:$koin_version"
+    // Koin main features for Android (Scope,ViewModel ...)
+    implementation "io.insert-koin:koin-android:$koin_version"
+    // Koin Java Compatibility
+    implementation "io.insert-koin:koin-android-compat:$koin_version"
+    // Koin for Jetpack WorkManager
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+
+    //Room ORM
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    //Kotlin Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    //AdapterDelegate
+    implementation "com.hannesdorfmann:adapterdelegates4-kotlin-dsl:$adapterDelegate_version"
 }
